# ChangeLog for net-analyzer/net-snmp
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/net-snmp/ChangeLog,v 1.221 2011/03/01 20:02:12 arfrever Exp $

  01 Mar 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  net-snmp-5.4.2.1-r4.ebuild, net-snmp-5.4.3.ebuild, net-snmp-5.5.ebuild:
  Use Python 2 (bug #356573).

  26 Feb 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  net-snmp-5.4.2.1-r4.ebuild, net-snmp-5.4.3.ebuild, net-snmp-5.5.ebuild:
  Fix deprecation warnings.

  26 Feb 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -net-snmp-5.4.2.1-r1.ebuild:
  Delete.

  06 Nov 2010; Mark Loeser <halcy0n@gentoo.org> net-snmp-5.4.2.1-r4.ebuild:
  Stable for ppc64; bug #323197

  11 Aug 2010; Jeroen Roovers <jer@gentoo.org> net-snmp-5.5.ebuild:
  Build perl modules respecting LDFLAGS too (bug #328685).

  11 Aug 2010; Jeroen Roovers <jer@gentoo.org> net-snmp-5.4.3.ebuild:
  Build perl modules respecting LDFLAGS too (bug #328685).

  04 Aug 2010; Jeroen Roovers <jer@gentoo.org> net-snmp-5.4.2.1-r4.ebuild,
  +files/net-snmp-5.4.2.1-perlcc-hppa.patch:
  Fix toolchain quadruplet detection (bug #330353).

  13 Jul 2010; Jeroen Roovers <jer@gentoo.org> net-snmp-5.5.ebuild:
  Remove unneeded autotools eclass.

*net-snmp-5.5 (13 Jul 2010)
*net-snmp-5.4.3 (13 Jul 2010)

  13 Jul 2010; Jeroen Roovers <jer@gentoo.org> +net-snmp-5.4.3.ebuild,
  +net-snmp-5.5.ebuild:
  Version bump (bug #317325). Respect LDFLAGS more (perl still broken).
  Remove lm_sensors support from 5.5 until there is a patch.

  12 Jul 2010; Jeroen Roovers <jer@gentoo.org> net-snmp-5.4.2.1-r4.ebuild:
  Stable for HPPA (bug #323197).

  27 Jun 2010; Raúl Porcel <armin76@gentoo.org> net-snmp-5.4.2.1-r4.ebuild:
  alpha/arm/ia64/s390/sh/sparc stable wrt #323197

  27 Jun 2010; Samuli Suominen <ssuominen@gentoo.org>
  net-snmp-5.4.2.1-r1.ebuild: