@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX CVE-2008-6123.patch 867 RMD160 1e8b6521ae0955681493c1ba594eb0344183e147 SHA1 3742c405fab9ac829acc93383bc39ba5b39962e9 SHA256 31a9b72b252582cd84e7f673b670ebbd2153dc719894aa668a48b24d6ba516f6
 AUX net-snmp-5.1.2-snmpconf-selinux.patch 286 RMD160 c78fd9d2a563ebafd21aa85a582b989a805eb645 SHA1 159990e855cfeb50ac3657d1b97eda181d4ffb9e SHA256 70b4bdaa243efd5ae5703b3272063314fc56b6e2333f7c650b635ddab141f874
 AUX net-snmp-5.4.1-sensors3-version_detect.patch 1391 RMD160 eba5c1cba2fc5d0484143eb4b41f656f5f72bee4 SHA1 8c8ebcc9e4725e91cc7b07cdd45cbcf6e2ed806e SHA256 e18f7bd358c4f587793f9e9250489200d2708b50529dfe222f04b71617fa1e59
@@ -10,8 +13,17 @@ AUX snmptrapd.init 624 RMD160 799faf488a62bc219d3765ed6d6283ca7764ad1c SHA1 1fde
 DIST net-snmp-5.4.2.1.tar.gz 5185390 RMD160 2148c42d486ed88f9cfc3ca1d50c68abcd7e3d63 SHA1 4f2df9ea62344fe840f493d0e08abe5de3697862 SHA256 11a8baf167f7bfff60d2590e050991400a3a082923dbcdbf85e0e0ce46eb247c
 DIST net-snmp-5.4.3.tar.gz 5199202 RMD160 417f47c301c3221a64f37162b56b4661c9f6d8cb SHA1 849a20ddeaa90b1b0010e487876927e615b5c6bc SHA256 461a7a72acbe5ad13e39f0bae129b49df541b8ea8f9178d2724de7654d4f1c40
 DIST net-snmp-5.5.tar.gz 5531055 RMD160 1699d9cb6bcd5075a565cc8af9913be4dfbc49e2 SHA1 ca03ece79b218af081ee4b273da4e217f459e508 SHA256 95936c6a95bef929e7ae0d9144c3fa20ffe62291dff94835bde88c5b5d2bf347
+DIST net-snmp-5.6.1.tar.gz 5936889 RMD160 7c2bb5a9597992bfc25a39b9e951ca9d1d84a26d SHA1 45bbf1295253d5379a5d1efd918593160387fd00 SHA256 b0dde210878d6e186dab84e00d6830943645c27eb9e6c6ec468a2934b5f4a8c7
 EBUILD net-snmp-5.4.2.1-r4.ebuild 5985 RMD160 7548f71f62167115ebf7a70a8cfaa88687b3b7e3 SHA1 128d12409ce08921293fe8c8463ee246c10b10d6 SHA256 f3ae5d80382b6b1298e5e39e8e72b7df5bb6a1f8fcbc9ebd30fbf1cb1d05b311
 EBUILD net-snmp-5.4.3.ebuild 6011 RMD160 83fbbd719fda6c4e96e9a6d80cf463e92e93b2b1 SHA1 4dde51bcf52842ada6190b517f4391e79f9b0a87 SHA256 303ec1e3e57c7c576eb9fb28a57461f40091fb0fd8d2ae488bc404b94ac14107
 EBUILD net-snmp-5.5.ebuild 5676 RMD160 acbf50bd3eff8f18e0bdd70adb4d866211ba9190 SHA1 8e7b2ca71dd1512f5aeae4e2ffe47f8543d6ede1 SHA256 451ec05320501548c0fafb50f120a8f3132a02efbd5b44b7b0799b183d631805
-MISC ChangeLog 36546 RMD160 dd222be5bac825e9003d02ccedf395b581870454 SHA1 45f4544e025f9a3b39e03c6e40ff28181bd28616 SHA256 009a613236ce8e6542ac99b3649d578ffe334c0a62cd9faa6eebf390db9405c2
+EBUILD net-snmp-5.6.1.ebuild 5698 RMD160 c9c8860346544f11b8da805e78b42d6fe93dbed3 SHA1 4aaf49dc18b8c12b0f1b87d3383b0dc4161b998c SHA256 befaed3944aafa35670046dc962e01050f333f3de23bb28701d7b7a34ee54920
+MISC ChangeLog 36677 RMD160 983104dde89f3bf2a8eb7afc95c07bdc9eb710d4 SHA1 91fe550b2a3a74da5f78e25b5b0b68c0a6e86f3c SHA256 bf19b53516c1f2c5b3ca45fd2ab5506c9271fd188cedbaa8dfc69625cc0bd77b
 MISC metadata.xml 675 RMD160 3785784fde686fec578c82814a96f295e64c800b SHA1 433d32bd2e67c60324ad401a1b3eeb6b908656d2 SHA256 ed42873349256bf59c84251b140b22c5323a2d3d359fec89217ba50f8cecd9c4
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.17 (GNU/Linux)
+
+iEYEARECAAYFAk2uHO0ACgkQVWmRsqeSphOH9wCfd6aPbuaS8LSCyo1YSkp8dQiU
+qBAAnjDE9intBPcCjQbMpsshZty+Bz3j
+=GOvN
+-----END PGP SIGNATURE-----
