@@ -1,6 +1,11 @@
 # ChangeLog for net-analyzer/net-snmp
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/net-snmp/ChangeLog,v 1.221 2011/03/01 20:02:12 arfrever Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/net-snmp/ChangeLog,v 1.222 2011/04/19 23:38:16 jer Exp $
+
+*net-snmp-5.6.1 (19 Apr 2011)
+
+  19 Apr 2011; Jeroen Roovers <jer@gentoo.org> +net-snmp-5.6.1.ebuild:
+  Version bump thanks to euscan.
 
   01 Mar 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
   net-snmp-5.4.2.1-r4.ebuild, net-snmp-5.4.3.ebuild, net-snmp-5.5.ebuild:
